--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://wa.link/xtfnmb" target="_balk"><div class="form-input">WhatsApp<i class="fab fa-whatsapp"></i></div></a>
         <a href="https://www.naturacosmeticos.com.ar/consultoria/saragarcianat" target="_balk"><div class="form-input">E-Tienda<i class="fab fa-shopify"></i></i></div></a>
         <a href="https://natura.com.vc/ciclo_03-2w9zw" target="_balk"><div class="form-input">Catálogo<i class="fas fa-book-open"></i></div></a>
-        <p>Gracias Por Elegirme :)</p>
+        <p>Gracias Por Elegirme  </p><i class="far fa-grin-beam"></i>
     </div>
 
 </body>
